Added dumprestore functionality
Added
- Restore is now fully functional.
- New docker container dependencies are now part of the repo

While on project root, use this to run your container:
sudo docker run --rm -d -e NEO4J_AUTH=none -p 7474:7474 -p 7687:7687 -v /home/rajat/Desktop/Code/Projects/gnowdb/neo4j/plugins:/plugins --volume=/home/rajat/Desktop/Code/Projects/gnowdb/neo4j/data:/data --volume=/home/rajat/Desktop/Code/Projects/gnowdb/neo4j/conf:/var/lib/neo4j/conf --volume=/home/rajat/Desktop/Code/Projects/gnowdb/backups:/var/lib/neo4j/backups --name=neo4j neo4j:3.2.0-enterprise

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ pom.xml.asc
 /target/
 /checkouts/
 /src/gnowdb/neo4j/gconf.clj
+/neo4j/data/
+backups/
 .lein-deps-sum
 .lein-repl-history
 .lein-plugins/
